--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,10 @@
 [ ] update materials to use a pool
 [ ] update swapchain not to reallocate sync object arrays
-[ ] fix shader reloading bugs
 [ ] arg parser, check if arg is included
 [ ] change function timer to use object to store data, not a global
 [ ] implement push constants
-[ ] update file operation verification to use strstr. If file path length > 0,
+[X] update file operation verification to use strstr. If file path length > 0,
 return should equal the path
 [X] swapchain recreation failure memory leaks
 [X] device format memory leaks
+[X] fix shader reloading bugs
