--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,10 @@
 [ ] update materials to use a pool
-[ ] update swapchain not to reallocate sync object arrays
 [ ] arg parser, check if arg is included
-[ ] change function timer to use object to store data, not a global
 [ ] implement push constants
-[ ] fix null char starting file path
+[ ] buffer wrapper to store size
+[X] change function timer to use object to store data, not a global
+[X] fix null char starting file path
+[X] use copy buffer to create vertices
 [X] update file operation verification to use strstr. If file path length > 0,
 return should equal the path
 [X] swapchain recreation failure memory leaks
