doesn't work idk why

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@
 [ ] arg parser, check if arg is included
 [ ] implement push constants
 [ ] buffer wrapper to store size
+[ ] bug in mesh drawing, idk why (VK_ERROR_DEVICE_LOST)
 [X] change function timer to use object to store data, not a global
 [X] fix null char starting file path
 [X] use copy buffer to create vertices
