Change the mesh lists to use buffers
The materials' mesh list use a buffer, to avoid heap allocations.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,8 @@
-[ ] update materials to use a pool
+[X] update materials to use a pool
 [ ] arg parser, check if arg is included
 [ ] implement push constants
 [ ] buffer wrapper to store size
-<<<<<<< HEAD
-=======
-[ ] bug in mesh drawing, idk why (VK_ERROR_DEVICE_LOST)
->>>>>>> devel
+[X] bug in mesh drawing, idk why (VK_ERROR_DEVICE_LOST)
 [X] change function timer to use object to store data, not a global
 [X] fix null char starting file path
 [X] use copy buffer to create vertices
